examples/test/testpolicy1051.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1051
  namespace: namespace421
spec:
  podSelector:
    matchLabels:
      key22: value15
      key33: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value12
          key48: value40
      podSelector:
        matchLabels:
          key34: value45
